--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "proxy": "https://blushing-mite-sundress.cyclic.app/",
+  "proxy":"https://tricky-pink-sweater.cyclic.app/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
